--- a/src/styles/_event.scss
+++ b/src/styles/_event.scss
@@ -8,18 +8,7 @@
         background-image: linear-gradient(variables.$blue1, variables.$blue2);
     } 
 
-    &--ux-ui { 
-        background-image: linear-gradient(variables.$blue2, variables.$pink);
-    }
-
-    &--data-science { 
-        background-image: linear-gradient(variables.$pink, variables.$yellow);
-    }
-
-    &--backend { 
-        background-image: linear-gradient(variables.$yellow, variables.$pink);
-    }
-
+  
     &--image-left { 
         .container { 
             flex-direction: row-reverse;
@@ -34,17 +23,19 @@
 
     &__image { 
         max-width: 360px;
+        background-size: cover;
     }
 
     &__details { 
+        margin-top: 100px;
         
         &__title { 
-            font-size: 18px;
+            font-size: 50px;
             font-weight: bold;
             margin-bottom: 16px;
         }
         &__description { 
-            line-height: 22px;
+            line-height: 40px;
         }
     }
 
