--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,7 +1,7 @@
 .hero { 
     padding-top: 64px;
     padding-bottom: 100px;
-    background-image: url(../images/fundo.png);
+    background-image: url(../images/R.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -33,7 +33,7 @@
 
     &__logo { 
         margin: 0 auto;
-        height: 80px;
+        height: 100px;
         display: block;
     }
 
