--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,7 +2,7 @@
 $textColor: #fff;
 $secondaryTextColor: #000;
 
-$blue1: #1b6ca7;
-$blue2: #442bdb;
+$blue1: #000000;
+$blue2: #070f50;
 $pink: #89223b;
 $yellow: #9c791d;
